Make Route Manager appear in full screen

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "async": "^3.2.6"
   }
 }
