--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-VITE_TILES_URL=http://localhost:5173/src/tiles/
+VITE_TILES_URL=http://localhost:5173/src/source_tiles/
 VITE_TILESET=all-charts.pmtiles
